--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
     </div>
     <h5 style="text-align: center">Архив новостей</h5>
 </div> <!-- servicesHolder -->
-
+<!-- Ненужный коммент, чтобы показать Тиме, как работает гит -->
 <div class="servicesHolder">
     <div class="row">
         <div class="large-3 columns centeredColumn fixxed" role="content">
